Fix CSS overflow

--- a/ImplementationGuide-Common/styles/style.css
+++ b/ImplementationGuide-Common/styles/style.css
@@ -89,3 +89,16 @@ html, body {
 .col-md-12 img{
   width: auto;
 }
+
+#ig-viewer .ig-view-content #ig-view-treetable .container-fluid #guide-panel .preview-panel.full-width table.regular {
+  display: block !important;
+  border: none;
+} 
+
+#ig-viewer .ig-view-content #ig-view-treetable .container-fluid #guide-panel .preview-panel.full-width table.regular tbody {
+  border: 1px solid #e0e0e0;
+} 
+
+#ig-viewer .ig-view-content #ig-view-treetable .container-fluid #guide-panel .preview-panel.full-width table.regular thead {
+  border: 1px solid #e0e0e0;
+} 
